--- a/index.html
+++ b/index.html
@@ -13,9 +13,22 @@
         </div>
     </header> 
     <main>
-
+        <div class="location">
+            <div class="location__icone">
+                <i class="fas fa-map-marker-alt"></i>
+            </div>
+            <div class="location__search"><p>Paris, Belleville</p></div>
+        </div>
+        .
     </main>   
     <footer>
+        <h3>ohmyfood</h3>
+        <ul>
+            <li>Proposer un restaurant</li>
+            <li>Devenir Partenaire</li>
+            <li>Mention légales</li>
+            <li>Contact</li>
+        </ul>
 
     </footer>
 </body>
