Modfication background footer

--- a/index.html
+++ b/index.html
@@ -7,29 +7,32 @@
     <title>ohmyfood</title>
 </head>
 <body>
-    <header>
-        <div class="header">
-            <h1 class="header__title">ohmyfood</h1>
-        </div>
-    </header> 
-    <main>
-        <div class="location">
-            <div class="location__icone">
-                <i class="fas fa-map-marker-alt"></i>
+    <div class="content">
+        <header>
+            <div class="header">
+                <h1 class="header__title">ohmyfood</h1>
             </div>
-            <div class="location__search"><p>Paris, Belleville</p></div>
-        </div>
-        .
-    </main>   
-    <footer>
-        <h3>ohmyfood</h3>
-        <ul>
-            <li>Proposer un restaurant</li>
-            <li>Devenir Partenaire</li>
-            <li>Mention légales</li>
-            <li>Contact</li>
-        </ul>
-
-    </footer>
+        </header> 
+        <main>
+            <div class="location">
+                <div class="location__icone">
+                    <i class="fas fa-map-marker-alt"></i>
+                </div>
+                <div class="location__search"><p>Paris, Belleville</p></div>
+            </div>
+            .
+        </main> 
+    </div>  
+        <footer>
+            <div class="footer__bloc content">
+                <h3>ohmyfood</h3>
+                <ul>
+                    <li>Proposer un restaurant</li>
+                    <li>Devenir Partenaire</li>
+                    <li>Mention légales</li>
+                    <li>Contact</li>
+                </ul>
+            </div>
+        </footer>
 </body>
 </html>
