--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
+    <script src="https://kit.fontawesome.com/c3840ad690.js" crossorigin="anonymous"></script>
     <title>ohmyfood</title>
 </head>
 <body>
@@ -20,7 +21,7 @@
                 </div>
                 <div class="location__search"><p>Paris, Belleville</p></div>
             </div>
-            .
+            
         </main> 
     </div>  
         <footer>
