--- a/index.html
+++ b/index.html
@@ -21,7 +21,51 @@
                 </div>
                 <div class="location__search"><p>Paris, Belleville</p></div>
             </div>
-            
+            <div class="reservation">
+                <h2>Réservez le menu qui vous convient</h2>
+                <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
+                <div><a>Exloprer nos restaurants</a></div>
+            </div>
+            <div class="presentation">
+                <h2>Fonctionnement</h2>
+                <div class="presentation__card"><P>Choisissez un restaurant</P></div>
+                <div class="presentation__card"><P>Choisissez un restaurant</P></div>
+                <div class="presentation__card"><P>Choisissez un restaurant</P></div>
+            </div>
+            <div class="restaurant">
+                <div class="restaurant__card">
+                    <img src="assets/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant">
+                    <div class="restaurant__card--text">
+                        <h4>La palette du goût</h4>
+                        <P>Menilmontant</P>
+                    </div>
+                    <div class="restaurant__card--icone"></div>
+                </div>
+                <div class="restaurant__card">
+                    <img src="assets/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant">
+                    <div class="restaurant__card--text">
+                        <h4>La palette du goût</h4>
+                        <P>Menilmontant</P>
+                    </div>
+                    <div class="restaurant__card--icone"></div>
+                </div>
+                <div class="restaurant__card">
+                    <img src="assets/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant">
+                    <div class="restaurant__card--text">
+                        <h4>La palette du goût</h4>
+                        <P>Menilmontant</P>
+                    </div>
+                    <div class="restaurant__card--icone"></div>
+                </div>
+                <div class="restaurant__card">
+                    <img src="assets/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant">
+                    <div class="restaurant__card--text">
+                        <h4>La palette du goût</h4>
+                        <P>Menilmontant</P>
+                    </div>
+                    <div class="restaurant__card--icone"></div>
+                </div>
+            </div>
         </main> 
     </div>  
         <footer>
