Renommage - dossier polices > fonts

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,19 +8,22 @@
     <script src="https://kit.fontawesome.com/c3840ad690.js" crossorigin="anonymous"></script>
     <title>ohmyfood</title>
 </head>
+
 <body>
     <div class="content">
         <header>
             <div class="header">
                 <h1 class="header__title">ohmyfood</h1>
             </div>
-        </header> 
+        </header>
         <main>
             <div class="location">
                 <div class="location__icone">
                     <i class="fas fa-map-marker-alt"></i>
                 </div>
-                <div class="location__search"><p>Paris, Belleville</p></div>
+                <div class="location__search">
+                    <p>Paris, Belleville</p>
+                </div>
             </div>
             <div class="reservation">
                 <h2>Réservez le menu qui vous convient</h2>
@@ -28,9 +32,15 @@
             </div>
             <div class="presentation">
                 <h2>Fonctionnement</h2>
-                <div class="presentation__card"><P>Choisissez un restaurant</P></div>
-                <div class="presentation__card"><P>Choisissez un restaurant</P></div>
-                <div class="presentation__card"><P>Choisissez un restaurant</P></div>
+                <div class="presentation__card">
+                    <P>Choisissez un restaurant</P>
+                </div>
+                <div class="presentation__card">
+                    <P>Choisissez un restaurant</P>
+                </div>
+                <div class="presentation__card">
+                    <P>Choisissez un restaurant</P>
+                </div>
             </div>
             <div class="restaurant">
                 <div class="restaurant__card">
@@ -66,18 +76,19 @@
                     <div class="restaurant__card--icone"></div>
                 </div>
             </div>
-        </main> 
-    </div>  
-        <footer>
-            <div class="footer__bloc content">
-                <h3>ohmyfood</h3>
-                <ul>
-                    <li>Proposer un restaurant</li>
-                    <li>Devenir Partenaire</li>
-                    <li>Mention légales</li>
-                    <li>Contact</li>
-                </ul>
-            </div>
-        </footer>
+        </main>
+    </div>
+    <footer>
+        <div class="footer__bloc content">
+            <h3>ohmyfood</h3>
+            <ul>
+                <li>Proposer un restaurant</li>
+                <li>Devenir Partenaire</li>
+                <li>Mention légales</li>
+                <li>Contact</li>
+            </ul>
+        </div>
+    </footer>
 </body>
+
 </html>
