--- a/index.html
+++ b/index.html
@@ -6,16 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="https://kit.fontawesome.com/c3840ad690.js" crossorigin="anonymous"></script>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap');
+    </style>
     <title>ohmyfood</title>
 </head>
 
 <body>
+    <header>
+        <div class="header">
+            <h1>ohmyfood</h1>
+        </div>
+    </header>
     <div class="content">
-        <header>
-            <div class="header">
-                <h1 class="header__title">ohmyfood</h1>
-            </div>
-        </header>
         <main>
             <div class="location">
                 <div class="location__icone">
@@ -80,7 +83,7 @@
     </div>
     <footer>
         <div class="footer__bloc content">
-            <h3>ohmyfood</h3>
+            <h3 class="footer__title">ohmyfood</h3>
             <ul>
                 <li>Proposer un restaurant</li>
                 <li>Devenir Partenaire</li>
