Mise en page Reservation

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <h1>ohmyfood</h1>
         </div>
     </header>
-    <div class="content">
-        <main>
-            <div class="location">
+    <main>
+        <div class="location">
+            <div class="location__bloc">
                 <div class="location__icone">
                     <i class="fas fa-map-marker-alt"></i>
                 </div>
@@ -28,23 +28,25 @@
                     <p>Paris, Belleville</p>
                 </div>
             </div>
-            <div class="reservation">
-                <h2>Réservez le menu qui vous convient</h2>
-                <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
-                <div><a>Exloprer nos restaurants</a></div>
+        </div>
+        <div class="reservation">
+            <h2>Réservez le menu qui vous convient</h2>
+            <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
+            <div class="reservation__button"><a>Exloprer nos restaurants</a></div>
+        </div>
+        <div class="presentation">
+            <h2>Fonctionnement</h2>
+            <div class="presentation__card">
+                <P>Choisissez un restaurant</P>
             </div>
-            <div class="presentation">
-                <h2>Fonctionnement</h2>
-                <div class="presentation__card">
-                    <P>Choisissez un restaurant</P>
-                </div>
-                <div class="presentation__card">
-                    <P>Choisissez un restaurant</P>
-                </div>
-                <div class="presentation__card">
-                    <P>Choisissez un restaurant</P>
-                </div>
+            <div class="presentation__card">
+                <P>Choisissez un restaurant</P>
             </div>
+            <div class="presentation__card">
+                <P>Choisissez un restaurant</P>
+            </div>
+        </div>
+        <div class="content">
             <div class="restaurant">
                 <div class="restaurant__card">
                     <img src="assets/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant">
@@ -79,7 +81,7 @@
                     <div class="restaurant__card--icone"></div>
                 </div>
             </div>
-        </main>
+    </main>
     </div>
     <footer>
         <div class="footer__bloc content">
