Mise en forme "presentation"

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="reservation">
             <h2>Réservez le menu qui vous convient</h2>
             <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
-            <div class="reservation__button"><a>Exloprer nos restaurants</a></div>
+            <div class="reservation__button"><p>Exloprer nos restaurants</p></div>
         </div>
         <div class="presentation">
             <h2>Fonctionnement</h2>
