Ajout max-width pour body

--- a/index.html
+++ b/index.html
@@ -36,24 +36,24 @@
                 <p>Exloprer nos restaurants</p>
             </div>
         </div>
-        <div class="content">
-            <div class="presentation">
-                <h2>Fonctionnement</h2>
-                <div class="presentation__container">
-                    <div class="presentation__card">
-                        <P>Choisissez un restaurant</P>
-                    </div>
-                    <div class="presentation__card">
-                        <P>Choisissez un restaurant</P>
-                    </div>
-                    <div class="presentation__card">
-                        <P>Choisissez un restaurant</P>
-                    </div>
+        <div class="presentation content">
+            <h2>Fonctionnement</h2>
+            <div class="presentation__container">
+                <div class="presentation__card">
+                    <P>Choisissez un restaurant</P>
+                </div>
+                <div class="presentation__card">
+                    <P>Choisissez un restaurant</P>
+                </div>
+                <div class="presentation__card">
+                    <P>Choisissez un restaurant</P>
                 </div>
             </div>
-            <div class="restaurant">
+        </div>
+        <div class="restaurant">
+            <div class="content">
                 <h2>Restaurant</h2>
-                <div class="restaurant__container">
+                <div class="restaurant__container content">
                     <div class="restaurant__card">
                         <img src="assets/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant">
                         <div class="restaurant__card--text">
@@ -88,8 +88,8 @@
                     </div>
                 </div>
             </div>
+        </div>
     </main>
-    </div>
     <footer>
         <div class="footer__bloc content">
             <h3 class="footer__title">ohmyfood</h3>
