Mise en forme presentation

--- a/index.html
+++ b/index.html
@@ -32,21 +32,26 @@
         <div class="reservation">
             <h2>Réservez le menu qui vous convient</h2>
             <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
+            <a href="#">
             <div class="reservation__button">
                 <p>Exloprer nos restaurants</p>
             </div>
+        </a>
         </div>
         <div class="presentation content">
             <h2>Fonctionnement</h2>
             <div class="presentation__container">
                 <div class="presentation__card">
+                    <i class="fas fa-mobile-alt"></i>
                     <P>Choisissez un restaurant</P>
                 </div>
                 <div class="presentation__card">
-                    <P>Choisissez un restaurant</P>
+                    <i class="fas fa-list"></i>
+                    <P>Composez votre menu</P>
                 </div>
                 <div class="presentation__card">
-                    <P>Choisissez un restaurant</P>
+                    <i class="fas fa-store"></i>
+                    <P>Dégustez au restaurant</P>
                 </div>
             </div>
         </div>
