--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
             <h2>Fonctionnement</h2>
             <div class="presentation__container">
                 <div class="presentation__card">
+                    <div class="presentation__card-count">
+                        <p>1</p>
+                    </div>
                     <i class="fas fa-mobile-alt"></i>
                     <P>Choisissez un restaurant</P>
                 </div>
@@ -61,7 +64,7 @@
                 <div class="restaurant__container content">
                     <div class="restaurant__card">
                         <img src="assets/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant">
-                        <div class="restaurant__card--text">
+                        <div class="restaurant__card-text">
                             <h4>La palette du goût</h4>
                             <P>Menilmontant</P>
                         </div>
@@ -69,7 +72,7 @@
                     </div>
                     <div class="restaurant__card">
                         <img src="assets/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant">
-                        <div class="restaurant__card--text">
+                        <div class="restaurant__card-text">
                             <h4>La palette du goût</h4>
                             <P>Menilmontant</P>
                         </div>
@@ -77,7 +80,7 @@
                     </div>
                     <div class="restaurant__card">
                         <img src="assets/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant">
-                        <div class="restaurant__card--text">
+                        <div class="restaurant__card-text">
                             <h4>La palette du goût</h4>
                             <P>Menilmontant</P>
                         </div>
@@ -85,7 +88,7 @@
                     </div>
                     <div class="restaurant__card">
                         <img src="assets/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant">
-                        <div class="restaurant__card--text">
+                        <div class="restaurant__card-text">
                             <h4>La palette du goût</h4>
                             <P>Menilmontant</P>
                         </div>
