--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
         <div class="restaurant">
             <div class="content">
-                <h2>Restaurant</h2>
+                <h2>Restaurants</h2>
                 <div class="restaurant__container content">
                     <div class="restaurant__card">
                         <img src="assets/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant">
@@ -68,7 +68,7 @@
                             <h4>La palette du goût</h4>
                             <P>Menilmontant</P>
                         </div>
-                        <div class="restaurant__card--icone"></div>
+                        <div class="restaurant__card--icone"><i class="far fa-heart"></i></div>
                     </div>
                     <div class="restaurant__card">
                         <img src="assets/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant">
@@ -76,7 +76,7 @@
                             <h4>La palette du goût</h4>
                             <P>Menilmontant</P>
                         </div>
-                        <div class="restaurant__card--icone"></div>
+                        <div class="restaurant__card--icone"><i class="far fa-heart"></i></div>
                     </div>
                     <div class="restaurant__card">
                         <img src="assets/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant">
@@ -84,7 +84,7 @@
                             <h4>La palette du goût</h4>
                             <P>Menilmontant</P>
                         </div>
-                        <div class="restaurant__card--icone"></div>
+                        <div class="restaurant__card--icone"><i class="far fa-heart"></i></div>
                     </div>
                     <div class="restaurant__card">
                         <img src="assets/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant">
@@ -92,7 +92,7 @@
                             <h4>La palette du goût</h4>
                             <P>Menilmontant</P>
                         </div>
-                        <div class="restaurant__card--icone"></div>
+                        <div class="restaurant__card--icone"><i class="far fa-heart"></i></div>
                     </div>
                 </div>
             </div>
@@ -102,8 +102,8 @@
         <div class="footer__bloc content">
             <h3 class="footer__title">ohmyfood</h3>
             <ul>
-                <li>Proposer un restaurant</li>
-                <li>Devenir Partenaire</li>
+                <li><i class="fas fa-utensils"></i> Proposer un restaurant</li>
+                <li><i class="fas fa-hands-helping"></i> Devenir Partenaire</li>
                 <li>Mention légales</li>
                 <li>Contact</li>
             </ul>
