Presentation Card correction

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
             <h2>Réservez le menu qui vous convient</h2>
             <p>Découvrez des restaurants d'exception, sélectionnés par nos soins</p>
             <a href="#">
-            <div class="reservation__button">
-                <p>Exloprer nos restaurants</p>
-            </div>
-        </a>
+                <div class="reservation__button">
+                    <p>Exloprer nos restaurants</p>
+                </div>
+            </a>
         </div>
         <div class="presentation content">
             <h2>Fonctionnement</h2>
@@ -49,10 +49,16 @@
                     <P>Choisissez un restaurant</P>
                 </div>
                 <div class="presentation__card">
+                    <div class="presentation__card-count">
+                        <p>2</p>
+                    </div>
                     <i class="fas fa-list"></i>
                     <P>Composez votre menu</P>
                 </div>
                 <div class="presentation__card">
+                    <div class="presentation__card-count">
+                        <p>3</p>
+                    </div>
                     <i class="fas fa-store"></i>
                     <P>Dégustez au restaurant</P>
                 </div>
