Card Footer modification

--- a/index.html
+++ b/index.html
@@ -70,35 +70,43 @@
                 <div class="restaurant__container content">
                     <div class="restaurant__card">
                         <img src="assets/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant">
-                        <div class="restaurant__card-text">
-                            <h4>La palette du goût</h4>
-                            <P>Menilmontant</P>
+                        <div class="restaurant__footer">
+                            <div class="restaurant__card-text">
+                                <h4>La palette du goût</h4>
+                                <P>Menilmontant</P>
+                            </div>
+                            <div class="restaurant__card-icone"><i class="far fa-heart"></i></div>
                         </div>
-                        <div class="restaurant__card--icone"><i class="far fa-heart"></i></div>
                     </div>
                     <div class="restaurant__card">
                         <img src="assets/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant">
-                        <div class="restaurant__card-text">
-                            <h4>La palette du goût</h4>
-                            <P>Menilmontant</P>
+                        <div class="restaurant__footer">
+                            <div class="restaurant__card-text">
+                                <h4>La palette du goût</h4>
+                                <P>Menilmontant</P>
+                            </div>
+                            <div class="restaurant__card-icone"><i class="far fa-heart"></i></div>
                         </div>
-                        <div class="restaurant__card--icone"><i class="far fa-heart"></i></div>
                     </div>
                     <div class="restaurant__card">
                         <img src="assets/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant">
-                        <div class="restaurant__card-text">
-                            <h4>La palette du goût</h4>
-                            <P>Menilmontant</P>
+                        <div class="restaurant__footer">
+                            <div class="restaurant__card-text">
+                                <h4>La palette du goût</h4>
+                                <P>Menilmontant</P>
+                            </div>
+                            <div class="restaurant__card-icone"><i class="far fa-heart"></i></div>
                         </div>
-                        <div class="restaurant__card--icone"><i class="far fa-heart"></i></div>
                     </div>
                     <div class="restaurant__card">
                         <img src="assets/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant">
-                        <div class="restaurant__card-text">
-                            <h4>La palette du goût</h4>
-                            <P>Menilmontant</P>
+                        <div class="restaurant__footer">
+                            <div class="restaurant__card-text">
+                                <h4>La palette du goût</h4>
+                                <P>Menilmontant</P>
+                            </div>
+                            <div class="restaurant__card-icone"><i class="far fa-heart"></i></div>
                         </div>
-                        <div class="restaurant__card--icone"><i class="far fa-heart"></i></div>
                     </div>
                 </div>
             </div>
