--- a/index.html
+++ b/index.html
@@ -68,46 +68,54 @@
             <div class="content">
                 <h2>Restaurants</h2>
                 <div class="restaurant__container content">
-                    <div class="restaurant__card">
-                        <img src="assets/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant">
-                        <div class="restaurant__footer">
-                            <div class="restaurant__card-text">
-                                <h4>La palette du goût</h4>
-                                <P>Menilmontant</P>
+                    <a href="#">
+                        <div class="restaurant__card">
+                            <img src="assets/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant">
+                            <div class="restaurant__footer">
+                                <div class="restaurant__card-text">
+                                    <h4>La palette du goût</h4>
+                                    <P>Menilmontant</P>
+                                </div>
+                                <div class="restaurant__card-icone"><i class="far fa-heart"></i></div>
                             </div>
-                            <div class="restaurant__card-icone"><i class="far fa-heart"></i></div>
                         </div>
-                    </div>
-                    <div class="restaurant__card">
-                        <img src="assets/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant">
-                        <div class="restaurant__footer">
-                            <div class="restaurant__card-text">
-                                <h4>La palette du goût</h4>
-                                <P>Menilmontant</P>
+                    </a>
+                    <a href="#">
+                        <div class="restaurant__card">
+                            <img src="assets/img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restaurant">
+                            <div class="restaurant__footer">
+                                <div class="restaurant__card-text">
+                                    <h4>La palette du goût</h4>
+                                    <P>Menilmontant</P>
+                                </div>
+                                <div class="restaurant__card-icone"><i class="far fa-heart"></i></div>
                             </div>
-                            <div class="restaurant__card-icone"><i class="far fa-heart"></i></div>
                         </div>
-                    </div>
-                    <div class="restaurant__card">
-                        <img src="assets/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant">
-                        <div class="restaurant__footer">
-                            <div class="restaurant__card-text">
-                                <h4>La palette du goût</h4>
-                                <P>Menilmontant</P>
+                    </a>
+                    <a href="#">
+                        <div class="restaurant__card">
+                            <img src="assets/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Restaurant">
+                            <div class="restaurant__footer">
+                                <div class="restaurant__card-text">
+                                    <h4>La palette du goût</h4>
+                                    <P>Menilmontant</P>
+                                </div>
+                                <div class="restaurant__card-icone"><i class="far fa-heart"></i></div>
                             </div>
-                            <div class="restaurant__card-icone"><i class="far fa-heart"></i></div>
                         </div>
-                    </div>
-                    <div class="restaurant__card">
-                        <img src="assets/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant">
-                        <div class="restaurant__footer">
-                            <div class="restaurant__card-text">
-                                <h4>La palette du goût</h4>
-                                <P>Menilmontant</P>
+                    </a>
+                    <a href="#">
+                        <div class="restaurant__card">
+                            <img src="assets/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Restaurant">
+                            <div class="restaurant__footer">
+                                <div class="restaurant__card-text">
+                                    <h4>La palette du goût</h4>
+                                    <P>Menilmontant</P>
+                                </div>
+                                <div class="restaurant__card-icone"><i class="far fa-heart"></i></div>
                             </div>
-                            <div class="restaurant__card-icone"><i class="far fa-heart"></i></div>
                         </div>
-                    </div>
+                    </a>
                 </div>
             </div>
         </div>
