--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
                     </a>
                     <a href="#">
                         <div class="restaurant__card">
-                            <img src="assets/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Restaurant">
+                            <img src="assets/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                                alt="Restaurant">
                             <div class="restaurant__footer">
                                 <div class="restaurant__card-text">
                                     <h4>La palette du goût</h4>
@@ -121,14 +122,16 @@
         </div>
     </main>
     <footer>
-        <div class="footer__bloc content">
-            <h3 class="footer__title">ohmyfood</h3>
-            <ul>
-                <li><i class="fas fa-utensils"></i> Proposer un restaurant</li>
-                <li><i class="fas fa-hands-helping"></i> Devenir Partenaire</li>
-                <li>Mention légales</li>
-                <li>Contact</li>
-            </ul>
+        <div class="content">
+            <div class="footer__bloc">
+                <h3 class="footer__title">ohmyfood</h3>
+                <ul>
+                    <li><i class="fas fa-utensils"></i> Proposer un restaurant</li>
+                    <li><i class="fas fa-hands-helping"></i> Devenir Partenaire</li>
+                    <li>Mention légales</li>
+                    <li>Contact</li>
+                </ul>
+            </div>
         </div>
     </footer>
 </body>
