Ajout background image menu

--- a/menu_1.html
+++ b/menu_1.html
@@ -19,19 +19,131 @@
         </div>
     </header>
     <main>
-    <div class="background__cover">
-        <img src="assets/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant">
-    </div>
+        <div class="background__cover content">
+        
+        </div>
+        <div class="menu__container content">
+            <div class="menu__coloumn">
+                <div class="menu__card">
+                    <div class="restaurant__footer">
+                        <div class="menu__card-text">
+                            <a href="#">
+                                <h4>La palette du goût</h4>
+                                <P>Menilmontant</P>
+                            </a>
+                        </div>
+                        <div class="menu__card-icone"><i class="far fa-heart"></i></div>
+                    </div>
+                </div>
+                <div class="menu__card">
+                    <div class="restaurant__footer">
+                        <div class="menu__card-text">
+                            <a href="#">
+                                <h4>La palette du goût</h4>
+                                <P>Menilmontant</P>
+                            </a>
+                        </div>
+                        <div class="menu__card-icone"><i class="far fa-heart"></i></div>
+                    </div>
+                </div>
+                <div class="menu__card">
+                    <div class="restaurant__footer">
+                        <div class="menu__card-text">
+                            <a href="#">
+                                <h4>La palette du goût</h4>
+                                <P>Menilmontant</P>
+                            </a>
+                        </div>
+                        <div class="menu__card-icone"><i class="far fa-heart"></i></div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="menu__coloumn">
+                <div class="menu__card">
+                    <div class="restaurant__footer">
+                        <div class="menu__card-text">
+                            <a href="#">
+                                <h4>La palette du goût</h4>
+                                <P>Menilmontant</P>
+                            </a>
+                        </div>
+                        <div class="menu__card-icone"><i class="far fa-heart"></i></div>
+                    </div>
+                </div>
+                <div class="menu__card">
+                    <div class="restaurant__footer">
+                        <div class="menu__card-text">
+                            <a href="#">
+                                <h4>La palette du goût</h4>
+                                <P>Menilmontant</P>
+                            </a>
+                        </div>
+                        <div class="menu__card-icone"><i class="far fa-heart"></i></div>
+                    </div>
+                </div>
+                <div class="menu__card">
+                    <div class="restaurant__footer">
+                        <div class="menu__card-text">
+                            <a href="#">
+                                <h4>La palette du goût</h4>
+                                <P>Menilmontant</P>
+                            </a>
+                        </div>
+                        <div class="menu__card-icone"><i class="far fa-heart"></i></div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="menu__coloumn">
+                <div class="menu__card">
+                    <div class="restaurant__footer">
+                        <div class="menu__card-text">
+                            <a href="#">
+                                <h4>La palette du goût</h4>
+                                <P>Menilmontant</P>
+                            </a>
+                        </div>
+                        <div class="menu__card-icone"><i class="far fa-heart"></i></div>
+                    </div>
+                </div>
+                <div class="menu__card">
+                    <div class="restaurant__footer">
+                        <div class="menu__card-text">
+                            <a href="#">
+                                <h4>La palette du goût</h4>
+                                <P>Menilmontant</P>
+                            </a>
+                        </div>
+                        <div class="menu__card-icone"><i class="far fa-heart"></i></div>
+                    </div>
+                </div>
+                <div class="menu__card">
+                    <div class="restaurant__footer">
+                        <div class="menu__card-text">
+                            <a href="#">
+                                <h4>La palette du goût</h4>
+                                <P>Menilmontant</P>
+                            </a>
+                        </div>
+                        <div class="menu__card-icone"><i class="far fa-heart"></i></div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
     </main>
     <footer>
-        <div class="footer__bloc content">
-            <h3 class="footer__title">ohmyfood</h3>
-            <ul>
-                <li><i class="fas fa-utensils"></i> Proposer un restaurant</li>
-                <li><i class="fas fa-hands-helping"></i> Devenir Partenaire</li>
-                <li>Mention légales</li>
-                <li>Contact</li>
-            </ul>
+        <div class="content">
+            <div class="footer__bloc">
+                <h3 class="footer__title">ohmyfood</h3>
+                <ul>
+                    <li><i class="fas fa-utensils"></i> Proposer un restaurant</li>
+                    <li><i class="fas fa-hands-helping"></i> Devenir Partenaire</li>
+                    <li>Mention légales</li>
+                    <li>Contact</li>
+                </ul>
+            </div>
         </div>
     </footer>
 </body>
