Ajout liens footer

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
                         <div class="restaurant__footer">
                             <div class="restaurant__card-text">
                                 <a href="#">
-                                <h4>La palette du goût</h4>
-                                <P>Menilmontant</P>
+                                    <h4>La palette du goût</h4>
+                                    <P>Menilmontant</P>
                                 </a>
                             </div>
                             <div class="restaurant__card-icone"><i class="far fa-heart"></i></div>
@@ -89,8 +89,8 @@
                         <div class="restaurant__footer">
                             <div class="restaurant__card-text">
                                 <a href="#">
-                                <h4>La palette du goût</h4>
-                                <P>Menilmontant</P>
+                                    <h4>La palette du goût</h4>
+                                    <P>Menilmontant</P>
                                 </a>
                             </div>
                             <div class="restaurant__card-icone"><i class="far fa-heart"></i></div>
@@ -103,8 +103,8 @@
                         <div class="restaurant__footer">
                             <div class="restaurant__card-text">
                                 <a href="#">
-                                <h4>La palette du goût</h4>
-                                <P>Menilmontant</P>
+                                    <h4>La palette du goût</h4>
+                                    <P>Menilmontant</P>
                                 </a>
                             </div>
                             <div class="restaurant__card-icone"><i class="far fa-heart"></i></div>
@@ -117,14 +117,14 @@
                         <div class="restaurant__footer">
                             <div class="restaurant__card-text">
                                 <a href="#">
-                                <h4>La palette du goût</h4>
-                                <P>Menilmontant</P>
+                                    <h4>La palette du goût</h4>
+                                    <P>Menilmontant</P>
                                 </a>
                             </div>
                             <div class="restaurant__card-icone"><i class="far fa-heart"></i></div>
                         </div>
                     </div>
-                
+
                 </div>
             </div>
         </div>
@@ -134,10 +134,10 @@
             <div class="footer__bloc">
                 <h3 class="footer__title">ohmyfood</h3>
                 <ul>
-                    <li><i class="fas fa-utensils"></i> Proposer un restaurant</li>
-                    <li><i class="fas fa-hands-helping"></i> Devenir Partenaire</li>
-                    <li>Mention légales</li>
-                    <li>Contact</li>
+                    <li> <a href="#"> <i class="fas fa-utensils"></i> Proposer un restaurant</a></li>
+                    <li> <a href="#"> <i class="fas fa-hands-helping"></i> Devenir Partenaire</a></li>
+                    <li> <a href="#"> Mention légales</a></li>
+                    <li> <a href="#"> Contact</a></li>
                 </ul>
             </div>
         </div>
