--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
                 <h2>Restaurants</h2>
                 <div class="restaurant__container content">
                     <div class="restaurant__card">
-                        <a href="#">
+                        <a href="/menu_1.html">
                             <img src="assets/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant">
                         </a>
                         <div class="restaurant__footer">
                             <div class="restaurant__card-text">
-                                <a href="#">
+                                <a href="/menu_1.html">
                                     <h4>La palette du goût</h4>
                                     <P>Menilmontant</P>
                                 </a>
@@ -84,13 +84,13 @@
                     </div>
                     <div class="restaurant__card">
                         <a href="#">
-                            <img src="assets/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant">
+                            <img src="assets/img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restaurant">
                         </a>
                         <div class="restaurant__footer">
                             <div class="restaurant__card-text">
                                 <a href="#">
-                                    <h4>La palette du goût</h4>
-                                    <P>Menilmontant</P>
+                                    <h4>La note enchantée</h4>
+                                    <P>Charonne</P>
                                 </a>
                             </div>
                             <div class="restaurant__card-icone"><i class="far fa-heart"></i></div>
@@ -98,13 +98,13 @@
                     </div>
                     <div class="restaurant__card">
                         <a href="#">
-                            <img src="assets/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant">
+                            <img src="assets/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Restaurant">
                         </a>
                         <div class="restaurant__footer">
                             <div class="restaurant__card-text">
                                 <a href="#">
-                                    <h4>La palette du goût</h4>
-                                    <P>Menilmontant</P>
+                                    <h4>À la française</h4>
+                                    <P>Cité Rouge</P>
                                 </a>
                             </div>
                             <div class="restaurant__card-icone"><i class="far fa-heart"></i></div>
@@ -112,13 +112,13 @@
                     </div>
                     <div class="restaurant__card">
                         <a href="#">
-                            <img src="assets/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant">
+                            <img src="assets/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Restaurant">
                         </a>
                         <div class="restaurant__footer">
                             <div class="restaurant__card-text">
                                 <a href="#">
-                                    <h4>La palette du goût</h4>
-                                    <P>Menilmontant</P>
+                                    <h4>Le délice des sens</h4>
+                                    <P>Folie-Méricourt</P>
                                 </a>
                             </div>
                             <div class="restaurant__card-icone"><i class="far fa-heart"></i></div>
