--- a/menu_1.html
+++ b/menu_1.html
@@ -15,13 +15,18 @@
 <body>
     <header>
         <div class="header">
+            <div class="return"><i class="fas fa-arrow-left"></i></div>
             <h1>ohmyfood</h1>
         </div>
     </header>
     <main>
         <div class="background__cover content">
+            <img src=".//assets/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
         </div>
         <div class="menu__container content">
+            <div class="menu__header">
+                <h2>test </h2>
+            </div>
             <div class="menu__coloumn">
                 <div class="menu__card">
                     <div class="restaurant__footer">
