Correction header menu

--- a/menu_1.html
+++ b/menu_1.html
@@ -19,7 +19,12 @@
         </div>
     </header>
     <main>
-        <div class="background__cover content">
+        <div class="background__cover">
+            <img src="/assets/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+        </div>
+        <div class="menu__header content padding__20">
+            <h2 class="menu__header-h2">A la française</h2>
+            <span class="fav"><i class="far fa-heart"></i></span>
         </div>
         <div class="menu__container content">
             <div class="menu__coloumn">
