Correction lien carte vers menu

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <h2>Restaurants</h2>
                 <div class="restaurant__container content">
                     <div class="restaurant__card">
-                        <a href="/menu_1.html">
+                        <a href="menu_1.html">
                             <img src="assets/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant">
                         </a>
                         <div class="restaurant__footer">
