--- a/menu_1.html
+++ b/menu_1.html
@@ -20,13 +20,14 @@
         </div>
     </header>
     <main>
-        <div class="background__cover content">
+        <div class="background__cover">
             <img src=".//assets/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
         </div>
-        <div class="menu__container content">
-            <div class="menu__header">
-                <h2>test </h2>
-            </div>
+        <div class="menu__header content padding__20">
+            <h2>A la Française </h2>
+            <span class="menu__header-fav"><i class="far fa-heart"></i></span>
+        </div>
+        <div class="menu__container content ">
             <div class="menu__coloumn">
                 <div class="menu__card">
                     <div class="restaurant__footer">
