Ajouts connes menu

--- a/menu_1.html
+++ b/menu_1.html
@@ -27,21 +27,112 @@
             <h2>A la Française </h2>
             <span class="menu__header-fav"><i class="far fa-heart"></i></span>
         </div>
-        <div class="menu__container content ">
-            <div class="menu__coloumn">
+        <div class="menu__container content">
+            <div class="menu__column">
+                <h3>ENTREES</h3>
                 <div class="menu__card">
-                    <div class="restaurant__footer">
-                        <div class="menu__card-text">
-                            <a href="#">
-                                <h4>La palette du goût</h4>
-                                <P>Menilmontant</P>
-                            </a>
+                    <div class="menu__card-container">
+                        <div class="menu__card-title">
+                            <h4>Tartare de poulpes acidulé</h4>
                         </div>
-                        <div class="menu__card-icone"><i class="far fa-heart"></i></div>
+                        <span class="menu__card-text">Aux zests d'orange</span>
+                        <span class="menu__card-price">25€</span>
                     </div>
+                    <menu__card-animation></menu__card-animation>
+                </div>
+                <div class="menu__card">
+                    <div class="menu__card-container">
+                        <div class="menu__card-title">
+                            <h4>Tartare de poulpes acidulé</h4>
+                        </div>
+                        <span class="menu__card-text">Aux zests d'orange</span>
+                        <span class="menu__card-price">25€</span>
+                    </div>
+                    <menu__card-animation></menu__card-animation>
+                </div>
+                <div class="menu__card">
+                    <div class="menu__card-container">
+                        <div class="menu__card-title">
+                            <h4>Tartare de poulpes acidulé</h4>
+                        </div>
+                        <span class="menu__card-text">Aux zests d'orange</span>
+                        <span class="menu__card-price">25€</span>
+                    </div>
+                    <menu__card-animation></menu__card-animation>
                 </div>
 
             </div>
+
+<!-- colonne 2 -->
+<div class="menu__column">
+    <h3>ENTREES</h3>
+    <div class="menu__card">
+        <div class="menu__card-container">
+            <div class="menu__card-title">
+                <h4>Tartare de poulpes acidulé</h4>
+            </div>
+            <span class="menu__card-text">Aux zests d'orange</span>
+            <span class="menu__card-price">25€</span>
+        </div>
+        <menu__card-animation></menu__card-animation>
+    </div>
+    <div class="menu__card">
+        <div class="menu__card-container">
+            <div class="menu__card-title">
+                <h4>Tartare de poulpes acidulé</h4>
+            </div>
+            <span class="menu__card-text">Aux zests d'orange</span>
+            <span class="menu__card-price">25€</span>
+        </div>
+        <menu__card-animation></menu__card-animation>
+    </div>
+    <div class="menu__card">
+        <div class="menu__card-container">
+            <div class="menu__card-title">
+                <h4>Tartare de poulpes acidulé</h4>
+            </div>
+            <span class="menu__card-text">Aux zests d'orange</span>
+            <span class="menu__card-price">25€</span>
+        </div>
+        <menu__card-animation></menu__card-animation>
+    </div>
+
+</div>
+<!--colonne 3-->
+<div class="menu__column">
+    <h3>ENTREES</h3>
+    <div class="menu__card">
+        <div class="menu__card-container">
+            <div class="menu__card-title">
+                <h4>Tartare de poulpes acidulé</h4>
+            </div>
+            <span class="menu__card-text">Aux zests d'orange</span>
+            <span class="menu__card-price">25€</span>
+        </div>
+        <menu__card-animation></menu__card-animation>
+    </div>
+    <div class="menu__card">
+        <div class="menu__card-container">
+            <div class="menu__card-title">
+                <h4>Tartare de poulpes acidulé</h4>
+            </div>
+            <span class="menu__card-text">Aux zests d'orange</span>
+            <span class="menu__card-price">25€</span>
+        </div>
+        <menu__card-animation></menu__card-animation>
+    </div>
+    <div class="menu__card">
+        <div class="menu__card-container">
+            <div class="menu__card-title">
+                <h4>Tartare de poulpes acidulé</h4>
+            </div>
+            <span class="menu__card-text">Aux zests d'orange</span>
+            <span class="menu__card-price">25€</span>
+        </div>
+        <menu__card-animation></menu__card-animation>
+    </div>
+
+</div>
 
         </div>
     </main>
