Ajouter sous-lignage h3

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 <body>
     <header>
+        <div class="loader">Loading...</div>
         <div class="header">
             <h1>ohmyfood</h1>
         </div>
